# foundation-protocol

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: fp-codebase-guide.md  fp-concept-guide.md  fp-operations-guide.md  fp-skill-deployment-guide-zh.md
docs/plans/: 2026-03-01-release-hardening-plan.md
docs/site/: api.md  architecture.md  codebase-guide.md  examples.md  getting-started.md  index.md  operations.md  production-hardening.md  release-readiness.md  whitepaper-alignment.md
examples/: __init__.py
examples/quickstart/: __init__.py  basic_flow.py
examples/scenarios/: __init__.py  economy_settlement.py  governed_transfer.py  llm_tool_collaboration.py  transport_jsonrpc.py
scripts/: quality_gate.sh  run_examples.sh  run_tests.sh
skills/: README.md
skills/fp-onboarding/: SKILL.md
skills/fp-onboarding/agents/: openai.yaml
skills/fp-onboarding/references/: integration-playbook.md  manifest-v0.1.md  manifest.schema.json
skills/fp-onboarding/scripts/: render_manifest_template.py  validate_manifest.py
skills/python/fp_skill/: cli.py  runtime.py
spec/: README.md
src/fp/app/: activity_orchestrator.py  async_client.py  async_server.py  server.py
src/fp/runtime/: async_activity_engine.py  async_event_engine.py  async_session_engine.py
tests/conformance/: test_core_conformance.py
tests/integration/: test_examples_smoke.py
tests/unit/: test_async_typing_surface.py  test_fp_onboarding_skill_package.py  test_jsonrpc_transport.py  test_skill_cli.py  test_skill_runtime.py  test_stream_transports.py
(+4 files in other folders)
